--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -83,6 +83,12 @@
       }
     }
 
+    a.portfolio-link {
+      &:after {
+        content: 'WORKS';
+      }
+    }
+
     a.contact-link {
       &:after {
         content: 'CONTACT';
