--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,10 +1,10 @@
 .logo-container {
   z-index: 0;
   width: 400px;
-  height: 700px;
+  height: 609px;
   opacity: 0;
   position: absolute;
-  top: 200px;
+  top: 150px;
   right: 15%;
   bottom: 0;
   left: auto;
@@ -28,5 +28,19 @@
     opacity: 0;
     transform: rotateZ(10deg) !important;
     z-index: 1;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+ 
+  .logo-container {
+    position: relative;
+    width: 150px;
+    height: auto;
+    top: 50px;
+    right: 0;
+    box-sizing: border-box;
+    margin: auto;
+    left: 0;
   }
 }
