--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -126,3 +126,59 @@
   }
 }
 
+@media screen and (max-width: 1200px) {
+    .container.portfolio-page {
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+
+        h1.page-title {
+            margin-left: 20px;
+            margin-top: 20px;
+        }
+    
+        .image-box {
+            flex: 1 80%;
+            height: 200px;
+            margin-left: 6%;
+            overflow: show;
+            max-width: calc(90% - 10px);
+    
+            .title {
+                margin-bottom: 0;
+                margin-top: 0;
+                color: #fff;
+                font-size: 15px;
+                font-weight: 400;
+                line-height: 15px;
+            }
+        
+            .description {
+                font-size: 12px;
+                font-weight: 500;
+            }
+        
+            .description:hover {
+                font-size: 10px;
+                font-weight: 400;
+            }
+        
+            .btn {
+                margin-top: 10px;
+                margin-bottom: 5px;
+                padding: 0 12px;
+                height: 20px;
+                line-height: 17px;
+                border: 1px solid #26CFFC;
+                border-radius: 3px;
+                font-size:10px;
+                color: #fff;
+                background: transparent;
+                text-transform: uppercase;
+                font-weight: 500;
+                transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+                cursor: pointer;
+            }
+        }
+    }
+}
